[tool.poetry]
name = "daxartio"
version = "1.0.0"
description = ""
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
repository = "https://github.com/daxartio/daxartio.github.io"
homepage = "https://daxartio.github.io"
keywords = []

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
termynal = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
